--- a/app/src/main/res/layout/item_logistics_standing_listview.xml
+++ b/app/src/main/res/layout/item_logistics_standing_listview.xml
@@ -36,10 +36,17 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:ellipsize="end"
-                    android:maxWidth="128dp"
+                    android:maxWidth="120dp"
                     android:textColor="@color/text_gray_color"
                     android:textSize="14sp"
                     android:text="深圳市阿普匠科技有限公司"
+                    />
+                <ImageView
+                    android:id="@+id/img_auth_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/icon_certification_green"
+                    android:layout_marginLeft="3dp"
                     />
                 <ImageView
                     android:id="@+id/img_enterprise_auth_status"
@@ -62,7 +69,7 @@
                         android:id="@+id/tv_update_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="11.01 19:02"
+                        android:text="2016.11.01 19:02"
                         android:textColor="@color/text_gray_color"
                         android:layout_alignParentRight="true"
                         android:textSize="11sp"
