--- a/app/src/main/res/layout/activity_enterprise_create2.xml
+++ b/app/src/main/res/layout/activity_enterprise_create2.xml
@@ -29,7 +29,7 @@
                 android:src="@mipmap/icon_return" />
 
             <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
