--- a/app/src/main/res/layout/item_lv_order.xml
+++ b/app/src/main/res/layout/item_lv_order.xml
@@ -59,6 +59,8 @@
                     android:layout_marginBottom="6dp"
                     android:layout_marginTop="6dp"
                     android:lineSpacingExtra="3dp"
+                    android:maxLines="2"
+                    android:ellipsize="end"
                     android:text="丝径100-200，网孔4-10厘米，尺寸100*200 200*400"
                     android:textColor="@color/gray_color"
                     android:textSize="13sp" />
@@ -68,16 +70,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:paddingBottom="12dp"
-                   >
+                    android:paddingBottom="12dp">
 
                     <TextView
                         android:id="@+id/tv_company_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:gravity="center_vertical"
                         android:maxLines="1"
-                        android:ellipsize="end"
                         android:maxWidth="200dp"
                         android:text="阿普匠丝网有限公司"
                         android:textColor="@color/gray_color"
