--- a/app/src/main/res/layout/item_my_service_details.xml
+++ b/app/src/main/res/layout/item_my_service_details.xml
@@ -56,7 +56,7 @@
 
 
 
-    <View
+    <!--<View
         style="@style/LineStyle"
-        android:layout_marginLeft="22dp" />
+        android:layout_marginLeft="22dp" />-->
 </LinearLayout>
