--- a/app/src/main/res/layout/activity_processing_details.xml
+++ b/app/src/main/res/layout/activity_processing_details.xml
@@ -62,6 +62,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            android:descendantFocusability="beforeDescendants"
             android:background="@color/while_color"
             android:orientation="vertical">
 
