--- a/app/src/main/res/layout/item_lv_spec_image_stock.xml
+++ b/app/src/main/res/layout/item_lv_spec_image_stock.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -16,14 +16,17 @@
             android:textSize="13sp"
             android:text="丝径"/>
 
-        <TextView
-            android:id="@+id/txtValue"
-            android:layout_width="wrap_content"
+        <com.appjumper.silkscreen.view.MyListView
+            android:id="@+id/lvImage"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:textColor="@color/theme_color"
-            android:textSize="13sp"
-            android:text="55cm"/>
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="10dp"/>
+
     </LinearLayout>
+
+    <!--<View
+        style="@style/LineStyle"
+        android:layout_marginLeft="22dp" />-->
 
 </LinearLayout>
