--- a/app/src/main/res/layout/item_my_service_details.xml
+++ b/app/src/main/res/layout/item_my_service_details.xml
@@ -34,9 +34,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginLeft="22dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="12dp"
-        >
+        android:layout_marginBottom="9dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginRight="12dp">
+
         <TextView
             android:id="@+id/tv_gg"
             android:layout_width="100dp"
@@ -51,6 +52,7 @@
             android:text="规格"
             android:textColor="@color/theme_color"
             android:textSize="13sp" />
+
     </LinearLayout>
 
 
