--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,7 +59,7 @@
     <style name="LineStyle">
         <item name="android:background">#DEDFE0</item>
         <item name="android:layout_height">0.5dp</item>
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
     </style>
     <!-- 透明view-->
     <style name="transparent">
