--- a/app/src/main/res/layout/item_recycler_line_spec_stock.xml
+++ b/app/src/main/res/layout/item_recycler_line_spec_stock.xml
@@ -19,7 +19,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txtSpecNumber"
+            android:id="@+id/txtSpecName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="12dp"
@@ -36,6 +36,7 @@
             android:id="@+id/imgViClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:src="@mipmap/close_gray"/>
@@ -45,12 +46,14 @@
 
     <View
         style="@style/LineStyle"
-        android:layout_marginLeft="12dp" />
+        android:layout_marginLeft="12dp"/>
 
     <LinearLayout
         android:id="@+id/ll_specification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
         android:orientation="vertical"/>
 
 </LinearLayout>
