--- a/app/src/main/res/layout/item_lv_news.xml
+++ b/app/src/main/res/layout/item_lv_news.xml
@@ -14,7 +14,9 @@
             android:id="@+id/iv_img"
             android:layout_width="81dp"
             android:layout_height="60dp"
-            android:layout_margin="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginBottom="12dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
 
@@ -30,6 +32,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="3dp"
+                android:layout_marginLeft="5dp"
+                android:paddingLeft="7dp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:text="标题标题标题标题标题标题标题标题标题标题"
                 android:textColor="@color/black_color"
                 android:textSize="16sp" />
@@ -37,6 +43,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="9dp">
 
                <ImageView
