--- a/app/src/main/res/layout/item_lv_tender.xml
+++ b/app/src/main/res/layout/item_lv_tender.xml
@@ -9,9 +9,10 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="18dp"
+        android:paddingLeft="7dp"
         android:text="安平县道路工程施工图审核招标"
         android:textColor="@color/black_color"
         android:textSize="15sp" />
