--- a/app/src/main/res/layout/item_recycler_line_article.xml
+++ b/app/src/main/res/layout/item_recycler_line_article.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="12dp"
+    android:paddingLeft="5dp"
     android:paddingRight="12dp"
     android:paddingTop="3dp"
     android:paddingBottom="3dp"
@@ -11,16 +11,33 @@
     android:orientation="horizontal">
 
 
-    <TextView
-        android:id="@+id/txtTitle"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
-        android:text="由于近日连续大雾，价格预计上浮"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:textColor="@color/theme_color"
-        android:textSize="13sp"/>
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/unRead"
+            android:layout_width="6dp"
+            android:layout_height="6dp"
+            android:visibility="gone"
+            android:background="@drawable/shape_red_dot"/>
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:text="由于近日连续大雾，价格预计上浮"
+            android:paddingLeft="7dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="@color/theme_color"
+            android:textSize="13sp"/>
+
+
+    </RelativeLayout>
+
+
 
     <View
         android:layout_width="0dp"
