--- a/app/src/main/res/layout/item_recycler_line_article_all.xml
+++ b/app/src/main/res/layout/item_recycler_line_article_all.xml
@@ -4,21 +4,34 @@
     android:layout_height="wrap_content"
     android:background="@drawable/select_white_background"
     android:orientation="vertical"
-    android:paddingLeft="12dp"
+    android:paddingLeft="5dp"
     android:paddingRight="12dp"
     android:paddingTop="12dp">
 
-
-    <TextView
-        android:id="@+id/txtTitle"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:lineSpacingExtra="3dp"
-        android:maxLines="2"
-        android:text="由于近日连续大雾，价格预计上浮"
-        android:textColor="@color/text_black_color"
-        android:textSize="14sp" />
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/unRead"
+            android:layout_width="6dp"
+            android:layout_height="6dp"
+            android:visibility="gone"
+            android:background="@drawable/shape_red_dot"/>
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="7dp"
+            android:ellipsize="end"
+            android:lineSpacingExtra="3dp"
+            android:maxLines="2"
+            android:text="由于近日连续大雾，价格预计上浮"
+            android:textColor="@color/text_black_color"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
 
 
     <TextView
@@ -26,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:paddingLeft="7dp"
         android:text="12-27"
         android:textColor="@color/text_gray_light_color"
         android:textSize="11sp" />
@@ -33,6 +47,7 @@
 
     <View
         style="@style/LineStyle"
+        android:layout_marginLeft="7dp"
         android:layout_marginTop="12dp" />
 
 </LinearLayout>
